<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Pop Movies</string>
    <!-- Main fragment UI Texts -->
    <string name="default_movielist_header_text">Movie List</string>
    <string name="no_data_header">No data found. Please refresh.</string>
    <string name="MovieList_header_content_description">Movie List Header; also serves as error display place</string>
    <!-- Detail Fragment UI texts -->
    <string name="default_title_text">Movie Title</string>
    <string name="title_content_description">Movie Title</string>
    <string name="movie_poster_image">Movie Poster Image</string>
    <string name="poster_transition_element">Poster Transition element</string>
    <string name="rating_content_description">Rating</string>
    <string name="movie_backdrop_content_description">Movie Backdrop</string>
    <string name="vote_count_content_description">Average Vote Count </string>
    <string name="original_language_content_description">Dummy Text</string>
    <string name="release_date_content_decription">Release Date</string>
    <string name="default_release_date">01 Jan 1900</string>
    <string name="default_rating">00.00/10</string>
    <string name="overview_title">Overview</string>
    <string name="default_review_text">Kung Fu Panda has not dissapointed me. The vilaaains are not scary. My son, who is nine yearrs old enjoyed it thoroughly</string>
    <string name="default_author">Unknown</string>
    <string name="trailers_title">Trailers</string>
    <string name="no_trailers_available">No Trailer available </string>
    <string name="default_trailer_sec_header">Trailers</string>
    <string name="trailer_sec_header_content_description">Trailer Section</string>
    <string name="reviews_title">Review Title</string>
    <string name="no_reviews_available">No Review available</string>

    <string name="default_overview_text">Sunil belongs to a middle-class family, and is intent in pursuing his career with a music group,
    despite of his dad disapproval. Sunil is also in love with Anna, but Anna does not really love him,
    but likes him as a friend. Sunil is persistent, but instead Anna openly declares her love for Chris.
    In order to impress his dad, Sunil forges his examination results, but then later confesses to his family,
    who receive this news in utter dismay. Will this change Sunil\'s ways?
    Will Anna change her mind about Sunil or will she get married to Chris? </string>
    <string name="overview_content_description">Overview of the Movie</string>
    <string name="default_review_sec_header">Reviews</string>
    <string name="review_sec_header_content_description">Review Section</string>
    <string name="default_end_marker_text">THE END</string>
    <string name="end_marker_content_description">End of Movie Detail</string>

    <string name="play_button">Play</string>
    <!-- Detail Fragment UI texts Ends-->

    <!-- Menu label to fetch updated weather info from the server -->


    <string name="OptMenu1Value">popularity.asc</string>
    <string name="sort_pref_key_default">popularity</string>
    <string name="sort_pref_order_default">asc</string>

    <string name="no_internet_title">Connectivity problem</string>
    <string name="no_internet_message">No internet connection available please turn on your network services</string>
    <string name="no_internet_negative_btn">EXIT</string>
    <string name="no_internet_positive_btn">OKAY</string>

    <string name="title_activity_movie_detail">MovieDetail</string>

    <string name="ReleaseDateLabel">Released on: </string>
    <string name="RatingLabel">/10</string>
    <string name="movie_trailer_text">Movie Trailer</string>

    <string name="action_settings">Settings</string>
    <string name="action_map">Map Location</string>
    <string name="action_share">Share</string>
    <!-- Menu label to fetch updated weather info from the server -->
    <string name="action_refresh" translatable="false">Refresh</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->


    <!--  Strings for Sync Adapter >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> -->
    <string name="sync_account_type">popularmovies</string>
    <string name ="content_authority">com.android.rupeeright.popularmovies</string>
    <!--  <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< Strings for Sync Adapter -->

    <!-- Notification Format & other notification related stuff -->
    <string name="format_notification">Movies: <xliff:g id="Title">%1$s</xliff:g> Release date: <xliff:g id="Popularity">%2$s</xliff:g> Low: <xliff:g id="Rating">%3$s</xliff:g></string>
    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Movie Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <string name="pref_last_notification">last_notification</string>

    <!-- <<<<<<<<<<<<<<<<<<<<<<<<<< Strings related to Notification preference -->



    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <!-- Example settings for Sort By -->
    <string name="pref_header_sort_by">Sort By</string>
    <string name="pref_title_sort_by">Select Sort By field</string>
    <string-array name="pref_sort_by_titles">
        <item>Popularity</item>
        <item>Ratings</item>
        <item>Favorite</item>
    </string-array>

    <string-array name="pref_sort_by_values">
        <item>Popularity</item>
        <item>Ratings</item>
        <item>Favorite</item>
    </string-array>

    <string name="pref_sort_by_key" translatable="false">Sort By</string>
    <string name="pref_sort_by_default" translatable="false">Popularity</string>

    <!-- Example settings for Sort By -->
    <string name="pref_sort_by_order_key" translatable="false">Sort By Order</string>
    <string name="pref_title_sort_by_order">Sort By Order</string>
    <string name ="pref_sort_by_order_default">Asc </string>
    <string-array name="pref_sort_by_orders_values">
        <item>Asc</item>
        <item>Desc</item>
    </string-array>
    <string-array name="pref_sort_by_orders_titles">
        <item>Asc</item>
        <item>Desc</item>
    </string-array>

<!--  <<<<<<<<<<<<<<<<<<<<<<<<<<<<<< END OF P2 >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> -->
    <string name="no_movie_available">No Movie Available</string>

</resources>
