<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
   <PreferenceCategory>
    <ListPreference
        android:key="@string/pref_sort_by_key"
        android:title="@string/pref_title_sort_by"
        android:entries="@array/pref_sort_by_titles"
        android:entryValues="@array/pref_sort_by_values"
        android:defaultValue="@string/pref_sort_by_default"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

   </PreferenceCategory>

    <PreferenceCategory>
    <ListPreference
        android:key="@string/pref_sort_by_order_key"
        android:title="@string/pref_title_sort_by_order"
        android:entries="@array/pref_sort_by_orders_titles"
        android:entryValues="@array/pref_sort_by_orders_values"
        android:defaultValue="@string/pref_sort_by_order_default"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    </PreferenceCategory>
</PreferenceScreen>
