<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/backdrop_parallax_image_height"
                android:id="@+id/movie_backdrop_anchor"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/backdrop_parallax_image_height"
                android:id="@+id/Backdrop"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/backdrop_placeholder"
                android:contentDescription="@string/movie_backdrop_content_description"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/MovieTitle"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center_vertical|center_horizontal"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/movie_backdrop_anchor"
                android:layout_alignBottom="@+id/movie_backdrop_anchor" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/backdrop_parallax_container_height"
                android:layout_below="@id/movie_backdrop_anchor"
                android:background="@color/background_material_light"
                android:layout_alignLeft="@+id/LinearLayout1"
                android:layout_alignRight="@+id/overview_cardview"
                android:layout_alignEnd="@+id/overview_cardview"
                android:id="@+id/view" />

            <ImageView
                android:layout_width="123dp"
                android:layout_height="184dp"
                android:id="@+id/MoviePoster"
                android:layout_below="@id/movie_backdrop_anchor"
                android:layout_marginTop="-20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/movie_poster_image"
                android:transitionName="@string/poster_transition_element"
                android:layout_alignBottom="@+id/view" />


            <LinearLayout
                android:id="@+id/LinearLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_backdrop_anchor"
                android:layout_toRightOf="@+id/MoviePoster"
                android:orientation="vertical"
                >

                <!-- ********************** Favorite   ************************ -->
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:paddingBottom="5dp"
                    android:paddingRight="10dp">

                    <CheckBox
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/favorite_checkbox"
                        android:button="@drawable/favorite_checkbox_selector"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginBottom="5dp"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        />


                </RelativeLayout>
                <!-- ********************** Rating   ************************ -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rating_section"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:id="@+id/rate_indicator"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:layout_marginRight="3dp"
                        android:src="@drawable/ic_star_black_18dp"
                        android:contentDescription="@string/rating_content_description" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/RatingValue"
                        android:gravity="center" />

                </LinearLayout>
                <!-- ********************** Release date   ************************ -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/date_section"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:id="@+id/date_indicator"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:layout_marginRight="3dp"
                        android:src="@drawable/ic_event_black_18dp"
                        android:contentDescription="@string/release_date_content_decription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/ReleaseDate"
                        android:gravity="center" />

                </LinearLayout>
                <!--   End of Release date -->

            </LinearLayout>
            <!-- End of left of Poster View -->
            <!-- Overview section -->
            <android.support.v7.widget.CardView
                android:id="@+id/overview_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/MoviePoster"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/overview_title"
                        android:text="@string/overview_title"
                        android:layout_marginTop="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="5dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/Overview"
                        android:text="@string/default_overview_text"
                        android:contentDescription="@string/overview_content_description"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="15dp"
                        />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <View style="@style/Divider"
                android:id="@+id/divider1"
                android:layout_below="@+id/overview_cardview"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id= "@+id/trailer_section"
                android:layout_below="@id/divider1"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:visibility="gone"
                >

            </LinearLayout>

            <View style="@style/Divider"
                android:id="@+id/divider2"
                android:layout_below="@id/trailer_section"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                />
            <!--android.support.v7.widget.CardView
                android:id="@+id/review_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider2"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:visibility="gone"-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/review_section"
                android:layout_below="@id/divider2"
                android:layout_marginTop="15dp"
                android:visibility="gone"
                >

            </LinearLayout>


            <!--/android.support.v7.widget.CardView-->

            <!--TextView
                android:id="@+id/end_marker"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@id/review_section"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/default_end_marker_text"
                android:contentDescription="@string/end_marker_content_description"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
            </TextView-->
            <View style="@style/Divider"
                android:id="@+id/end_marker"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                />
        </RelativeLayout>

    </ScrollView>

</LinearLayout>